# tablet-mode-keyboard-light

./: Cargo.toml  LICENSE  README.md  index.js  install.sh  package-lock.json  package.json  tablet-mode-keyboard-light.service  uninstall.sh
acpi/actions/: tablet-mode.sh
acpi/events/: tablet-mode
src/: main.rs
